<resources>
    <string name="app_name">Code Challenge</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="national_id">National ID</string>
    <string name="phone_no">Phone Number</string>
    <string name="dob">Date Of Birth</string>
    <string name="dashboard">Dashboard</string>
    <string name="more">More</string>
    <string name="data">Data</string>
    <string name="sort">Sort</string>
    <string name="details">Details</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="full_name_empty_error">full nam is required</string>
    <string name="email_empty_error">email is required</string>
    <string name="email_validation_error">valid email is required</string>
    <string name="national_id_empty_error">National Id is required</string>
    <string name="phone_no_empty_error">phone number is required</string>
    <string name="dob_empty_error">Date of birth is required</string>
    <string name="password_empty_error">password is required</string>
    <string name="password_validation_error">passowrd should be at least 8 chars and contains at least one upper case letter, symbole and number</string>
    <string name="offline_mode_message">the app is Offline</string>

</resources>