<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/dim_42dp"
        android:paddingVertical="@dimen/dim_16dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv"
            android:layout_width="@dimen/dim_150dp"
            android:layout_height="@dimen/dim_150dp"
            android:layout_marginTop="@dimen/dim_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/full_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_32dp"
            android:text="@string/register"
            app:layout_constraintStart_toEndOf="@id/iv"
            app:layout_constraintTop_toTopOf="@id/iv" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_32dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="@id/iv"
            app:layout_constraintStart_toEndOf="@id/iv" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/details_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/national_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_16dp"
            android:text="@string/national_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_tv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/national_id_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/national_id_tv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phone_no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8dp"
            android:text="@string/phone_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/national_id_value_tv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phone_no_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_no_tv" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dob_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8dp"
            android:text="@string/dob"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_no_value_tv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dob_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dob_tv" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settings_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_42dp"
            android:text="@string/settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dob_value_tv" />

        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_1dp"
            android:layout_marginTop="@dimen/dim_8dp"
            android:background="@color/cardview_dark_background"
            app:layout_constraintTop_toBottomOf="@id/settings_tv" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sort_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_16dp"
            android:drawableStart="@drawable/ic_logout"
            android:drawablePadding="@dimen/dim_8dp"
            android:text="@string/logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>